--- a/Code/ColorDistinguisher/ColorDifferentiator/MainWindow.xaml
+++ b/Code/ColorDistinguisher/ColorDifferentiator/MainWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="ColorDifferentiator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="355" Width="500">
+        Title="Color Determiner" Height="365" Width="520">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="393,261,0,0" VerticalAlignment="Top" Width="75" Height="19" Click="Button_Click_1"/>
+        <Button Content="Submit" HorizontalAlignment="Left" Margin="408,245,0,0" VerticalAlignment="Top" Width="60" Height="20"/>
         <Grid Margin="10,60,393,90" HorizontalAlignment="Left">
             <Slider x:Name ="RedSlider" MouseMove="Slider_OnMouseMove" IsMoveToPointEnabled="True"
         		Minimum="0" Maximum="256" 
@@ -23,7 +23,7 @@
             <TextBlock x:Name ="RedNum" HorizontalAlignment="Center" Height="19"  TextWrapping="Wrap" Text="0" VerticalAlignment="Bottom" Width="20" RenderTransformOrigin="0,1.5"/>
             <TextBlock Name ="RedTitle" HorizontalAlignment="Center" Margin="-12,0,0,150" TextWrapping="Wrap" Text="RED" VerticalAlignment="Bottom"/>
         </Grid>
-        <Grid Margin="100,60,303,90" HorizontalAlignment="Left">
+        <Grid Margin="191,60,0,90.2" HorizontalAlignment="Left">
             <Slider x:Name ="BlueSlider" MouseMove="Slider_OnMouseMove" IsMoveToPointEnabled="True"
         		Minimum="0" Maximum="256" 
         		TickFrequency="1" IsSnapToTickEnabled="True"
@@ -42,7 +42,7 @@
             <TextBlock x:Name ="BlueNum" HorizontalAlignment="Center" Height="19"  TextWrapping="Wrap" Text="0" VerticalAlignment="Bottom" Width="20" RenderTransformOrigin="0,1.5"/>
             <TextBlock Name ="BlueTitle" HorizontalAlignment="Center" Margin="-12,0,0,150" TextWrapping="Wrap" Text="BLUE" VerticalAlignment="Bottom"/>
         </Grid>
-        <Grid Margin="190,60,213,90" HorizontalAlignment="Left">
+        <Grid Margin="101,60,0,90.2" HorizontalAlignment="Left">
             <Slider x:Name ="GreenSlider" MouseMove="Slider_OnMouseMove" IsMoveToPointEnabled="True"
         		Minimum="0" Maximum="256" 
         		TickFrequency="1" IsSnapToTickEnabled="True"
@@ -61,6 +61,8 @@
             <TextBlock Name ="GreenNum" HorizontalAlignment="Center" Height="19"  TextWrapping="Wrap" Text="0" VerticalAlignment="Bottom" Width="20" RenderTransformOrigin="0,1.5"/>
             <TextBlock Name ="GreenTitle" HorizontalAlignment="Center" Margin="-12,0,0,150" TextWrapping="Wrap" Text="GREEN" VerticalAlignment="Bottom"/>
         </Grid>
+        <Rectangle Name ="ColorChosen" Fill="#000000" HorizontalAlignment="Left" Height="20" Margin="408,225,0,0" Stroke="Black" VerticalAlignment="Top" Width="60"/>
+
     </Grid>
 
 </Window>
