--- a/Code/ArtDentifier/ArtDentifier/MainWindow.xaml
+++ b/Code/ArtDentifier/ArtDentifier/MainWindow.xaml
@@ -1,17 +1,40 @@
 ﻿<Window x:Class="ArtDentifier.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="475" Width="550">
+        Title="MainWindow" Height="495" Width="650">
     <Grid>
-        <Grid VerticalAlignment="Center" HorizontalAlignment="Left" Width="250" Height="250">
+        <Grid VerticalAlignment="Center" HorizontalAlignment="Left" Width="260" Height="265" Margin="2,98,0,98">
             <Button Content="Browse" Height="32" HorizontalAlignment="Center" 
-    			x:Name="button1" VerticalAlignment="Bottom" Width="250" Click="button1_Click"/>
-                <Image Name="ImagePreview" Margin="0,0,0,32"/>
+    			x:Name="button1" VerticalAlignment="Bottom" Width="260" Click="button1_Click" Margin="0,0,0,10"/>
+                <Image Name="ImagePreview" Margin="0,0,0,42"/>
         </Grid>
-            <Grid VerticalAlignment="Center" HorizontalAlignment="Right" Height="250">
-            <TextBlock Name="ResultBox"  HorizontalAlignment="Left" Height="218" TextWrapping="Wrap" Text="Artist results will appear here" VerticalAlignment="Top" Width="229"/>
-            <Button Content="Submit" Height="32" HorizontalAlignment="Center" 
-        		x:Name="ImageSubmitter" VerticalAlignment="Bottom" Width="230" Click="button2_Click"/>
+            <Grid VerticalAlignment="Center" HorizontalAlignment="Right" Height="265" Margin="0,98,2,98" Width="305">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="74*"/>
+                <ColumnDefinition Width="35*"/>
+                <ColumnDefinition Width="35*"/>
+                <ColumnDefinition Width="35*"/>
+                <ColumnDefinition Width="35*"/>
+                <ColumnDefinition Width="35*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="24*"/>
+                <RowDefinition Height="24*"/>
+                <RowDefinition Height="24*"/>
+                <RowDefinition Height="24*"/>
+                <RowDefinition Height="24*"/>
+                <RowDefinition Height="24*"/>
+                <RowDefinition Height="90*"/>
+            </Grid.RowDefinitions>
+            <TextBlock Name="ResultBox"  HorizontalAlignment="Left" TextWrapping="Wrap" Text="Artist results will appear here" VerticalAlignment="Top" Width="305" Height="17" Grid.ColumnSpan="6" Margin="0,10,0,0"/>
+            <Button Content="Submit" Height="32" HorizontalAlignment="Right" 
+        		x:Name="ImageSubmitter" VerticalAlignment="Bottom" Width="230" Click="button2_Click" Grid.Row="6" Margin="0,0,0.157,9.8" Grid.ColumnSpan="6"/>
+            <TextBlock Name="Artist1" HorizontalAlignment="Left" Margin="0,27,0,0" Grid.RowSpan="2" TextWrapping="Wrap" Text=" " VerticalAlignment="Top" Grid.ColumnSpan="2" Height="27" Width="91"/>
+            <TextBlock Name="Artist2" HorizontalAlignment="Left" Margin="0,26.8,0,0" Grid.RowSpan="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="27" Width="91" Grid.Row="1"/>
+            <TextBlock Name="Artist3" HorizontalAlignment="Left" Margin="0,26.6,0,0" Grid.RowSpan="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="27" Width="91" Grid.Row="2"/>
+            <TextBlock Name="Artist4" HorizontalAlignment="Left" Margin="0,26.4,0,0" Grid.RowSpan="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="27" Width="91" Grid.Row="3"/>
+            <TextBlock Name="Artist5" HorizontalAlignment="Left" Margin="0,26.2,0,0" Grid.RowSpan="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="27" Width="91" Grid.Row="4"/>
+            <TextBlock Name="ArtistHeader" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="27" Width="91"/>
         </Grid>
     </Grid>
 </Window>
