--- a/Code/ColorDistinguisher/ColorDifferentiator/MainWindow.xaml
+++ b/Code/ColorDistinguisher/ColorDifferentiator/MainWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="ColorDifferentiator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Color Determiner" Height="365" Width="520">
+        Title="Color Determiner" Height="365" Width="590">
     <Grid>
-        <Button Content="Submit" Click="Button_Click_1"  HorizontalAlignment="Left" Margin="408,245,0,0" VerticalAlignment="Top" Width="60" Height="20"/>
+        <Button Content="Submit" Click="Button_Click_1"  HorizontalAlignment="Left" Margin="468,245,0,0" VerticalAlignment="Top" Width="60" Height="20"/>
         <Grid Margin="10,60,393,90" HorizontalAlignment="Left">
             <Slider x:Name ="RedSlider" MouseMove="Slider_OnMouseMove" IsMoveToPointEnabled="True"
         		Minimum="0" Maximum="256" 
@@ -61,8 +61,27 @@
             <TextBlock Name ="GreenNum" HorizontalAlignment="Center" Height="19"  TextWrapping="Wrap" Text="0" VerticalAlignment="Bottom" Width="20" RenderTransformOrigin="0,1.5"/>
             <TextBlock Name ="GreenTitle" HorizontalAlignment="Center" Margin="-12,0,0,150" TextWrapping="Wrap" Text="GREEN" VerticalAlignment="Bottom"/>
         </Grid>
-        <Rectangle Name ="ColorChosen" Fill="#000000" HorizontalAlignment="Left" Height="20" Margin="408,225,0,0" Stroke="Black" VerticalAlignment="Top" Width="60"/>
-        <TextBlock Name ="ResultText" HorizontalAlignment="Left" Height="68" Margin="286,60,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="182"/>
+        <Rectangle Name ="ColorChosen" Fill="#000000" HorizontalAlignment="Left" Height="20" Margin="468,225,0,0" Stroke="Black" VerticalAlignment="Top" Width="60"/>
+        <TextBlock Name ="ResultText" HorizontalAlignment="Left" Height="68" Margin="374,60,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="182"/>
+        <Grid Margin="279,60,0,90.2" HorizontalAlignment="Left">
+            <Slider x:Name ="ASlider" MouseMove="Slider_OnMouseMove" IsMoveToPointEnabled="True"
+        		Minimum="0" Maximum="256" 
+        		TickFrequency="1" IsSnapToTickEnabled="True"
+        		HorizontalAlignment="Center" 
+        		VerticalAlignment="Bottom" Height="33" 
+        		Width="120" RenderTransformOrigin="0.134,1.614" Margin="-6,0,-23.8,80">
+                <Slider.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="-90"/>
+                        <TranslateTransform X="72.884" Y="14.956"/>
+                    </TransformGroup>
+                </Slider.RenderTransform>
+            </Slider>
+            <TextBlock x:Name ="ANum" HorizontalAlignment="Center" Height="19"  TextWrapping="Wrap" Text="0" VerticalAlignment="Bottom" Width="20" RenderTransformOrigin="0,1.5"/>
+            <TextBlock x:Name ="ATitle" HorizontalAlignment="Center" Margin="-12,0,0,150" TextWrapping="Wrap" Text="A" VerticalAlignment="Bottom"/>
+        </Grid>
 
     </Grid>
 
