--- a/Code/ArtDentifier/ArtDentifier/ResultWindow.xaml
+++ b/Code/ArtDentifier/ArtDentifier/ResultWindow.xaml
@@ -3,11 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ResultWindow" Height="350" Width="550">
     <Grid>
-            <RadioButton Name ="RadioButton1" Content="RadioButton1" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="95" Margin="22,272,0,0"/>
-        <RadioButton Name ="RadioButton2" Content="RadioButton2" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="100" Margin="122,272,0,0"/>
-        <RadioButton Name ="RadioButton3" Content="RadioButton3" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="99" Margin="222,272,0,0"/>
-        <RadioButton Name ="RadioButton4" Content="RadioButton4" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" Width="100" Margin="326,272,0,0"/>
-        <RadioButton x:Name ="RadioButton5" Content="RadioButton5" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" Width="103" Margin="431,272,0,0" RenderTransformOrigin="2.198,1.682"/>
+        <Grid Margin="22,237,10,62.8">
+            <RadioButton x:Name ="RadioButton1" Content="Van Gogh" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="100"/>
+            <RadioButton x:Name ="RadioButton2" Content="Monet" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="100" Margin="100,0,0,0"/>
+            <RadioButton x:Name ="RadioButton3" Content="Raphael" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="100" Margin="200,0,0,0"/>
+            <RadioButton x:Name ="RadioButton4" Content="Picasso" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="100" Margin="304,0,0,0"/>
+            <RadioButton x:Name ="RadioButton5" Content="Blake" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="100" Margin="409,0,0,0" RenderTransformOrigin="2.198,1.682"/>
 
+        </Grid>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="208,281,0,0" VerticalAlignment="Top" Width="97" Height="30"/>
+        <TextBlock HorizontalAlignment="Left" Margin="110,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="80" Width="300"/>
     </Grid>
 </Window>
